@@ -5,6 +5,7 @@ from bzrlib.selftest import TestCaseInTempDir, TestCase
 from bzrlib.branch import Branch
 from bzrlib.errors import NotBranchError
 from bzrlib.inventory import InventoryFile
+from bzrlib.workingtree import WorkingTree
 
 class TestSmartAdd(TestCaseInTempDir):
 
@@ -79,67 +80,72 @@ class TestSmartAddBranch(TestCaseInTempDir):
 
     def test_add_dot_from_root(self):
         """Test adding . from the root of the tree.""" 
-        from bzrlib.add import smart_add_branch
+        from bzrlib.add import smart_add_tree
         paths = ("original/", "original/file1", "original/file2")
         self.build_tree(paths)
-        branch = Branch.initialize(".")
-        smart_add_branch(branch, (".",))
+        Branch.initialize(".")
+        tree = WorkingTree()
+        smart_add_tree(tree, (".",))
         for path in paths:
-            self.assertNotEqual(branch.working_tree().path2id(path), None)
+            self.assertNotEqual(tree.path2id(path), None)
 
     def test_add_dot_from_subdir(self):
         """Test adding . from a subdir of the tree.""" 
-        from bzrlib.add import smart_add_branch
+        from bzrlib.add import smart_add_tree
         paths = ("original/", "original/file1", "original/file2")
         self.build_tree(paths)
-        branch = Branch.initialize(".")
+        Branch.initialize(".")
+        tree = WorkingTree()
         os.chdir("original")
-        smart_add_branch(branch, (".",))
+        smart_add_tree(tree, (".",))
         for path in paths:
-            self.assertNotEqual(branch.working_tree().path2id(path), None)
+            self.assertNotEqual(tree.path2id(path), None)
 
     def test_add_tree_from_above_tree(self):
         """Test adding a tree from above the tree.""" 
-        from bzrlib.add import smart_add_branch
+        from bzrlib.add import smart_add_tree
         paths = ("original/", "original/file1", "original/file2")
         branch_paths = ("branch/", "branch/original/", "branch/original/file1",
                         "branch/original/file2")
         self.build_tree(branch_paths)
-        branch = Branch.initialize("branch")
-        smart_add_branch(branch, ("branch",))
+        Branch.initialize("branch")
+        tree = WorkingTree("branch")
+        smart_add_tree(tree, ("branch",))
         for path in paths:
-            self.assertNotEqual(branch.working_tree().path2id(path), None)
+            self.assertNotEqual(tree.path2id(path), None)
 
     def test_add_above_tree_preserves_tree(self):
         """Test nested trees are not affect by an add above them."""
-        from bzrlib.add import smart_add_branch
+        from bzrlib.add import smart_add_tree
         paths = ("original/", "original/file1", "original/file2")
         child_paths = ("path")
         full_child_paths = ("original/child", "original/child/path")
         build_paths = ("original/", "original/file1", "original/file2", 
                        "original/child/", "original/child/path")
         self.build_tree(build_paths)
-        branch = Branch.initialize(".")
+        Branch.initialize(".")
+        tree = WorkingTree()
         child_branch = Branch.initialize("original/child")
-        smart_add_branch(branch, (".",))
+        smart_add_tree(tree, (".",))
         for path in paths:
-            self.assertNotEqual((path, branch.working_tree().path2id(path)),
+            self.assertNotEqual((path, tree.path2id(path)),
                                 (path, None))
         for path in full_child_paths:
-            self.assertEqual((path, branch.working_tree().path2id(path)),
+            self.assertEqual((path, tree.path2id(path)),
                              (path, None))
         for path in child_paths:
             self.assertEqual(child_branch.working_tree().path2id(path), None)
 
     def test_add_paths(self):
         """Test smart-adding a list of paths."""
-        from bzrlib.add import smart_add_branch
+        from bzrlib.add import smart_add_tree
         paths = ("file1", "file2")
         self.build_tree(paths)
-        branch = Branch.initialize(".")
-        smart_add_branch(branch, paths)
+        Branch.initialize(".")
+        tree = WorkingTree()
+        smart_add_tree(tree, paths)
         for path in paths:
-            self.assertNotEqual(branch.working_tree().path2id(path), None)
+            self.assertNotEqual(tree.path2id(path), None)
 
 class TestAddCallbacks(TestCaseInTempDir):
 
